# v8_embedding_test_sync

./: .gitignore  README.md
puertstest/: AGENTS.md  CMakeLists.txt  build_linux.sh  hello-world-bindings.cc  hello-world-bindings.h  hello-world.cc  make_win64.bat  package-lock.json  package.json  tsconfig.json  ue.d.ts
puertstest/JavaScript/: hello-world.js
puertstest/JavaScript/helpers/: test-helper.js
puertstest/TypeScript/: hello-world.ts
puertstest/TypeScript/Internal/: InitEnv.js
puertstest/TypeScript/puerts/: modular.js
puertstest/Typescript/: hello-world.ts
puertstest/Typing/: Type.d.ts
puertstest/puerts/include/: CppObjectMapper.h  DataTransfer.h  DeclarationGenerator.h  JSClassRegister.h  JsEnv.h  ObjectCacheNode.h  ObjectMapper.h  PString.h  PuertsNamespaceDef.h  V8Object.hpp
puertstest/puerts/src/: CppObjectMapper.cpp  DataTransfer.cpp  DeclarationGenerator.cpp  JSClassRegister.cpp  JsEnv.cpp
